--- a/mutt.html
+++ b/mutt.html
@@ -93,7 +93,7 @@
 
 
 
-            <script src="mutt.js"></script>
+            <script src="Assets/javascript/mutt.js"></script>
     </body>
 
 </html>
