--- a/mutt.html
+++ b/mutt.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette|Fredoka+One|Kaushan+Script|Pacifico|Satisfy&amp;subset=cyrillic"
         rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="muttStyle.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="Assets/muttStyle.css" />
 
 
 </head>
