--- a/mutt.html
+++ b/mutt.html
@@ -72,10 +72,9 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <div>
-                                    <img src="http://via.placeholder.com/350x150" alt="">
+                                <div class="container" id="modalCarouselContainer">
+                                    <div id="innerCarousel" class="carousel"></div>
                                 </div>
-
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
