--- a/mutt.html
+++ b/mutt.html
@@ -58,8 +58,7 @@
 
 
             <div class="row">    
-            <i class="fas fa-heart"><span id="click-value"></span> Likes</i>    
-            </div>
+            <i class="fas fa-heart"><span id="click-value"></span> Likes</i>  </div>
 
 
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
