added an array to hold the description of each dog. pushed description of each dog to the array from the for each loop in the petfinder promise. Appended description of dog to modal of selected dog.

--- a/mutt.html
+++ b/mutt.html
@@ -73,6 +73,7 @@
                                 <div class="container" id="modalCarouselContainer">
                                     <div id="innerCarousel" class="carousel"></div>
                                 </div>
+                                <div id="dogDescription"></div>
                             </div>
                         </div>
                     </div>
