added static div elements in the modal to append information to. Changed styling of carousel inside modal. added logic to append the sex of the dog selected under the modal gallery

--- a/mutt.html
+++ b/mutt.html
@@ -73,7 +73,14 @@
                                 <div class="container" id="modalCarouselContainer">
                                     <div id="innerCarousel" class="carousel"></div>
                                 </div>
-                                <div id="dogDescription"></div>
+                                <div class="row">
+                                    <div class="col-md-4" id="dogName"></div>
+                                    <div class="col-md-4" id="dogSex"></div>
+                                    <div class="col-md-4" id="dogAge"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12" id="dogDescription"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
