--- a/mutt.html
+++ b/mutt.html
@@ -81,6 +81,14 @@
                                 <div class="row">
                                     <div class="col-md-12" id="dogDescription"></div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-md-12">Grab some great stuff for your new companion!</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-4" id="ebayItem1"></div>
+                                    <div class="col-md-4" id="ebayItem2"></div>
+                                    <div class="col-md-4" id="ebayItem3"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
