--- a/mutt.html
+++ b/mutt.html
@@ -57,8 +57,8 @@
                 </div>
 
 
-            <div class="row">    
-            <i class="fas fa-heart"><span id="click-value"></span> Likes</i>  </div>
+               
+                <i class="fas fa-heart"><span id="click-value"></span>Likes</i>
 
 
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -103,6 +103,7 @@
 
 
             <script src="Assets/javascript/mutt.js"></script>
+            <script src="Assets/javascript/firebase.js"></script>
     </body>
 
 </html>
