--- a/mutt.html
+++ b/mutt.html
@@ -96,10 +96,8 @@
             </div>
 
             <nav class="navbar fixed-bottom navbar-light bg-transparent">
-                <a class="navbar-brand" href="#">Fixed bottom</a>
+                <a class="navbar-brand" href="#"><img src="Assets/images/Solon.png"  ></a>
               </nav>
-
-
 
 
             <script src="Assets/javascript/mutt.js"></script>
