changed directory of landing page image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
 
     <h1>MUTT MATCH!!!!!</h1>
-    <img class="image" src="Images/Nw.jpg" alt="I1">
+    <img class="image" src="assets/images/Nw.jpg" alt="I1">
 
     <div class="row">
       <div class="col-6">
