removed page dots on inner carousel

--- a/mutt.html
+++ b/mutt.html
@@ -98,7 +98,7 @@
                 <a class="navbar-brand" href="#"><img src="Assets/images/Solon.png"  ></a>
               </nav>
 
-
+            <script src="Assets/javascript/landing.js"></script>
             <script src="Assets/javascript/mutt.js"></script>
             <script src="Assets/javascript/firebase.js"></script>
     </body>
