--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
 
   <div class="container">
 
-<<<<<<< HEAD
-    <h1>MUTT MATCH!!!!!</h1>
-    <img class="image" src="assets/images/Nw.jpg" alt="I1">
-=======
     <h1>MUTT MATCH</h1>
     <img class="image" src="Assets/images/Nw.jpg" alt="I1">
->>>>>>> 5aedfb171e2d314b92a0aaa8198d8dfd26da12af
 
     <div class="row">
       <div class="col-6">
@@ -86,6 +81,7 @@
 
 
       <script src="Assets/javascript/landing.js"></script>
+      <script src="Assets/javascript/mutt.js"></script>
     </div>
   </div>
 </body>
