added zip code input from user to search in petfinder ajax request

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             </div>
           </div>
         </div>
+        <div class="col-4">
+          <div class="input-group">
+            <input type="text" id="zip" class="form-control" placeholder="Zip code">
+          </div>
+        </div>
       </div>
 
       <div class="col-6">
