added adopt button and corrected the breed button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="col-8 txt m-txt_heavy m-txt_alignCenter mt-4">
           <div class="form-horizontal">
             <div class="input-group">
-              <input type="text"  id="breed" class="form-control" placeholder="Search text...">
+              <input type="text"  id="breed" class="form-control" placeholder="Type of Breed...">
               <span class="input-group-btn">
-                <button class="btn btn-light" type="button">Breed</button>
+                <!-- <button class="btn btn-light" type="button">Breed</button> -->
               </span>
             </div>
           </div>
