Made changes to align the text fields

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mutt Match</title>
+
+  <!--google fonts Link  -->
+  <link href="https://fonts.googleapis.com/css?family=Courgette|Fredoka+One|Kaushan+Script|Pacifico|Satisfy&amp;subset=cyrillic"
+  rel="stylesheet">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -22,11 +27,13 @@
 
   <div class="container-fluid">
     <!-- for header -->
-    <div class="row">
+    <div class="row mt-5">
       <div class="col-md-12 text-center">
         <h1>Mutt Match</h1>
       </div>
     </div>
+
+
     <!-- For Image block -->
     <div class="row">
       <img class="img-fluid mx-auto d-block" src="Assets/images/Nw.jpg" alt="I1">
@@ -36,7 +43,7 @@
 
       <div class="offset-md-2 col-md-2 mt-4">
         <h5></h5>
-        <div class="form-horizontal ml-4">
+        <div class="form-horizontal">
           <div class="input-group">
             <input type="text" id="breed" class="form-control" placeholder="Type of Breed...">
           </div>
@@ -44,14 +51,14 @@
       </div>
 
 
-      <div class="col-md-2 mt-4">
+      <div class="col-md-2 mt-4 mb-4">
         <h5></h5>
         <div class="input-group">
           <input type="text" id="zip" class="form-control" placeholder="Zip code">
         </div>
       </div>
 
-      <div class="col-md-2 txt">
+      <div class="col-md-2 txt mb-4">
         
         <div class="dropdown mr-4">
             <h5>Gender</h5>
@@ -68,7 +75,7 @@
 
       </div>
 
-      <div class="col-md-1 mb-4">
+      <div class="col-md-2 mb-4">
         <div class="dropdown show mr-4">
             <h5>Age</h5>
           <a class="btn btn-light dropdown-toggle btn-block text-right" href="#" role="button" id="AgeDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
