--- a/mutt.html
+++ b/mutt.html
@@ -47,7 +47,7 @@
                     <p>Welcoming a pet into your family is a big decision, but chances are good that your life will be better
                         than ever. When you’re ready to welcome a dog into your home, use
                         <strong> Mutt Match</strong> to find your new best friend.</p>
-                    <p>If your interested in more information about me click my picture. Don't forget to hit the like button!</p>
+                    <p>If you're interested in more information about me click my picture. Don't forget to hit the like button!</p>
                 </div>
             </div>
 
