add link to logo

--- a/mutt.html
+++ b/mutt.html
@@ -121,7 +121,7 @@
 
 
             <nav class="navbar fixed-bottom navbar-light bg-transparent">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="Assets/images/Solon.png" width="100px" height="150px">
                 </a>
                 <div class="approveBtn" button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal">
